Added a link to the Two.js stuff...

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Personal Portfolio of Stan Smith</title>
+</head>
+<body>
+
+  <h1>This is the personal portfolio of Stan Smith.</h1>
+
+  <ul>
+    <li><a href="labs/twojs">Two.js explorations</a></li>
+  </ul>
+
+</body>
+</html>
