--- a/labs/twojs/index.html
+++ b/labs/twojs/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 
+
+  <p>
+    <a href="../../">Home</a>
+  </p>
+
+
   <div id="draw-shapes">
     <div class="two-container"></div>
   </div>
