Added social media footer links.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,27 @@
 </head>
 <body>
 
+  <div class="logo">
+
+  </div>
+
   <h1>This is the personal portfolio of Stan Smith.</h1>
 
-  <ul>
-    <li><a href="labs/twojs">Two.js explorations</a></li>
-  </ul>
+  <section>
+    <ul>
+      <li><a href="labs/twojs">Two.js explorations</a></li>
+    </ul>
+  </section>
+
+  <hr/>
+
+  <footer>
+    <ul>
+      <li><a href="http://twitter.com/stanosmith">@stanosmith</a></li>
+      <li><a href="http://instagram.com/stanosmith">Instagram</a></li>
+      <li><a href="https://www.tumblr.com/blog/stanosmith">Tumblr</a></li>
+    </ul>
+  </footer>
 
 </body>
 </html>
