Added an SVG logo with a PNG fallback. Changed the title and heading in the index

--- a/index.html
+++ b/index.html
@@ -2,31 +2,49 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Personal Portfolio of Stan Smith</title>
+  <title>Code Playground of Stan Smith</title>
+
+  <style type="text/css">
+    .logo {
+      width: 200px;
+    }
+
+    .container {
+      margin: 0 auto;
+    }
+  </style>
+
 </head>
 <body>
 
-  <div class="logo">
+  <div class="container">
+
+    <header>
+      <div class="logo">
+        <img src="images/stanosmith-diac-logo.svg"
+             onerror="this.onerror=null; this.src='images/stanosmith-diac-logo.svg'">
+      </div>
+    </header>
+
+    <h1>Welcome to the code playground of Stan Smith.</h1>
+
+    <section>
+      <ul>
+        <li><a href="labs/twojs">Two.js explorations</a></li>
+      </ul>
+    </section>
+
+    <hr/>
+
+    <footer>
+      <ul>
+        <li><a href="http://twitter.com/stanosmith">@stanosmith</a></li>
+        <li><a href="http://instagram.com/stanosmith">Instagram</a></li>
+        <li><a href="https://www.tumblr.com/blog/stanosmith">Tumblr</a></li>
+      </ul>
+    </footer>
 
   </div>
-
-  <h1>This is the personal portfolio of Stan Smith.</h1>
-
-  <section>
-    <ul>
-      <li><a href="labs/twojs">Two.js explorations</a></li>
-    </ul>
-  </section>
-
-  <hr/>
-
-  <footer>
-    <ul>
-      <li><a href="http://twitter.com/stanosmith">@stanosmith</a></li>
-      <li><a href="http://instagram.com/stanosmith">Instagram</a></li>
-      <li><a href="https://www.tumblr.com/blog/stanosmith">Tumblr</a></li>
-    </ul>
-  </footer>
 
 </body>
 </html>
