--- a/labs/twojs/index.html
+++ b/labs/twojs/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Two.js Experiments - Labs - StanOSmith</title>
+  <title>Two.js Experiments - Labs - Code Playground of Stan Smith</title>
 </head>
 <body>
 
