Scaffolded and started customizing.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section>
       <ul>
-        <li><a href="labs/twojs">Two.js explorations</a></li>
+        <li><a href="src/app/labs/twojs">Two.js explorations</a></li>
       </ul>
     </section>
 
