Change title to digital playground

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     </header>
 
-    <h1>Welcome to the code playground of Stan Smith.</h1>
+    <h1>Welcome to the digital playground of Stan Smith.</h1>
 
     <section>
       <ul>
